--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ nav h1 {
   box-sizing: border-box;
   border-radius: 6px;
   position: relative;
+  border: ridge;
 }
 .smoothie-card .rating {
   position: absolute;
@@ -88,5 +89,18 @@ form button {
   border-radius: 6px;
   padding: 6px 8px;
   font-family: "Poppins";
+  cursor: pointer;
+}
+
+.smoothie-card .buttons {
+  text-align: right;
+}
+.smoothie-card i {
+  color: #bbb;
+  margin-left: 10px;
+  font-size: 1.2em;
+  padding: 6px;
+  background: #eee;
+  border-radius: 50%;
   cursor: pointer;
 }
